# Osync

./: CMakeLists.txt  README.md
include/: AppInfo.h  ArgumentParser.h  FileUtil.h  Log.h  OSDetection.h  PathNode.h  Synchronizer.h
src/: AppInfo.cpp  ArgumentParser.cpp  FileUtil.cpp  PathNode.cpp  Synchronizer.cpp  main.cpp
